src/cses/coin_piles/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/coin_piles/coin_piles.cpp.
/Users/michael/repos/competitive-programming/src/cses/coin_piles/coin_piles.cpp:3:10: error: 'cstdint' file not found [clang-diagnostic-error]
    3 | #include <cstdint>
      |          ^~~~~~~~~
Found compiler error(s).
